--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main.ts"
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main.ts",
+    "encrypt": "ccrypt -e *.env -K $(cat .env | grep PASSWORD | cut -d= -f2)",
+    "decrypt": "ccrypt -d *.cpt -K $(cat .env | grep PASSWORD | cut -d= -f2)"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
