--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mongoose": "^5.10.1",
     "@types/morgan": "^1.9.2",
     "@types/require-dir": "^1.0.1",
+    "@types/webpack": "^4.41.25",
     "jest": "^26.6.3",
     "morgan": "^1.10.0",
     "ts-node-dev": "^1.0.0",
@@ -21,14 +22,14 @@
   },
   "scripts": {
     "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/main.ts",
-    "prestart": "yarn decrypt",
-    "poststart": "yarn encrypt",
     "encrypt": "ccrypt -e .env.* -K $(cat .env | grep PASSWORD | cut -d= -f2)",
-    "decrypt": "ccrypt -d .env.*.cpt -K $(cat .env | grep PASSWORD | cut -d= -f2)"
+    "decrypt": "ccrypt -d .env.*.cpt -K $(cat .env | grep PASSWORD | cut -d= -f2)",
+    "build": "tsc --build"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -36,7 +37,11 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.17",
-    "require-dir": "^1.2.0"
+    "path-browserify": "^1.0.1",
+    "require-dir": "^1.2.0",
+    "ts-loader": "^8.0.11",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0"
   },
   "_moduleAliases": {
     "@": "src",
