--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "baseUrl": ".",
+    "outDir": "./build",
+    "sourceMap": true,
+    "declaration": true,
     "paths": {
       "@/*": ["src/*"],
       "@config/*": ["src/config/*"],
